--- a/css/styles.css
+++ b/css/styles.css
@@ -318,9 +318,11 @@ background: none;
     position: relative;
     padding: 0px;
     box-shadow: 0px 0px 1px rgba(0,0,0,0.4);
-    /*background: url("../images/banner-bg.jpg") no-repeat;*/
+    background: url(girlish.jpg);
+    background-repeat: no-repeat;
+    /*background: url("girlish.jpg") no-repeat;*/
     background-size: 50% 50%;
-    background-size: cover;
+    background-size: auto;
     margin-top: 60px;
     position: relative;
 }
