--- a/css/styles.css
+++ b/css/styles.css
@@ -428,8 +428,8 @@ color: #5E5E5E;
 }
 #aboutUs .image-center
 {
-	width="246";
-	height=246;
+	width:"246";
+	height:"246";
 }
 .tileBox p{
     background-color: #f0f0f0;
