--- a/css/styles.css
+++ b/css/styles.css
@@ -421,6 +421,12 @@ padding:20px 10px;
 font-size: 58px;
 color: #5E5E5E;
 }
+.image-center
+{
+	display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
 .tileBox p{
     background-color: #f0f0f0;
 font-size: 15px;
